Remove use of jquery for scroll highlighting. Fix bug in active link - need to use window.pageYOffset added to boundingClientRect().top + offsetHeight to get end pos. Use margin/padding hack to fix project jumpto anchor.

--- a/css/style.scss
+++ b/css/style.scss
@@ -80,9 +80,15 @@ div.topnav{
   color: black;
 }
 
+/* Margin/Padding hack to account for scroll bar when nav scrolling*/
 #about{
 	margin-top: -40px;
 	padding-top: 40px;
+}
+
+#projects{
+	margin-top: -60px;
+	padding-top:60px;
 }
 
 /*Selected projects styles*/
